# classical-piano-tracker

./: .gitignore  AGENTS.md  LLM_PROVIDER_PLAN.md  Makefile  PLAN.md  README.md  TUI_SCALING_PLAN.md  go.mod  go.sum  sqlc.yaml
backend/: .env.example  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py  seed.py
backend/app/services/: spotify.py  spotify_history.py
cmd/tracker/: main.go
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
internal/buildinfo/: buildinfo.go  doc.go
internal/cli/: config.go  config_test.go  doc.go  format.go  format_test.go  helpers.go  list.go  onboarding.go  onboarding_choice_picker.go  onboarding_picker.go  onboarding_picker_test.go  onboarding_test.go  parse.go  rate.go  rate_prompt.go  rate_test.go  recommend.go  recommend_test.go  root.go  root_test.go  show.go  spotify.go  sync.go  sync_test.go  tui.go  version.go
internal/config/: config.go  config_test.go  doc.go
internal/db/: doc.go  driver.go  models.go  querier.go  query.sql  query.sql.go  schema.sql  store.go  store_test.go
internal/llm/: client.go  client_test.go  discovery.go  doc.go  types.go
internal/openai/: client.go  client_test.go  doc.go
internal/paths/: doc.go  paths.go  paths_test.go
internal/recommend/: doc.go  recommend.go  recommend_test.go
internal/spotify/: auth.go  client.go  client_test.go  doc.go
internal/syncer/: doc.go  syncer.go  syncer_test.go
internal/tui/: app.go  app_test.go  (+1 more)
launchd/: com.plei99.piano-tracker.sync.plist.in
(+14 files in other folders)
