[project]
name = "classical-piano-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for tracking classical piano performances from Spotify history."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "spotipy>=2.24.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
